Version/V1.2.0/docs/testing.md
# 测试说明

## 已确认的公开测试边界

1. 首次启动没有保存视频时，内置媒体库请求对应 Android 版本的视频只读权限。
2. 已保存视频且授权有效时，系统进入可循环播放状态。
3. 文件授权被撤销时，系统要求重新选择而不是崩溃。
4. 开机启动只在开关开启、视频已选择且授权有效时发生。
5. 内置媒体库按遥控器勾选顺序保存播放列表；可选系统选择器保持其返回顺序。
6. 追加视频时保留原顺序，并按 URI 自动去重。
7. 列表中至少一个视频可读时允许播放和开机启动；全部不可读时要求重新选择。
8. MediaStore 扫描结果按文件名稳定排序、按 URI 去重，并容忍空结果。

测试文件：

- `app/src/test/java/com/chenwei/tvautoplay/PlaybackPolicyTest.java`
- `app/src/test/java/com/chenwei/tvautoplay/PlaylistBehaviorTest.java`
- `app/src/test/java/com/chenwei/tvautoplay/MediaCatalogTest.java`

## 自动化命令

```powershell
.\scripts\build.ps1
```

脚本执行：

1. `testDebugUnitTest`
2. `lintDebug`
3. `assembleDebug`

GitHub Actions 工作流 `.github/workflows/android.yml` 会在 `main` 推送和 Pull Request 上使用 Windows Runner 执行同一构建脚本，并上传 Debug APK 作为工作流产物。

## 人工电视验收清单

- 在未安装或禁用系统文件选择器的电视上，首次打开仍能进入内置媒体库。
- 首次打开显示视频读取权限；允许、拒绝、Android 14“仅选择部分视频”三条路径均不崩溃。
- 取消选择后界面可用，不连续弹窗、不崩溃。
- 在电视内部存储和 U 盘分别准备视频，确认两类来源都能扫描到。
- 一次按指定顺序勾选 3～5 个视频，确认按勾选顺序播放，最后一个结束后回到第一个。
- 勾选后执行“重新扫描”，确认仍存在的勾选项及顺序被保留。
- 追加包含一个已选文件和一个新文件，确认只新增一个且原顺序不变。
- 重新选择播放列表，确认旧列表被完整替换且无需每次启动重选。
- 按 Home 再打开，确认直接播放且无需重选。
- 完全断电重启，确认厂商自启动设置开启时自动进入播放。
- 拔掉 U 盘或删除文件，确认提示重新选择。
- 扫描过程中拔掉 U 盘，确认应用不崩溃且仍能使用其他存储卷。
- 移动或删除列表中的一个视频，确认自动跳过；全部不可读时提示重新选择。
- 验证返回键、菜单键、方向键、确认键的焦点与操作。
- 验证声音开关和两种画面模式。
- 分别在 720p、1080p、4K 输出下验证设置页无裁切、按钮可聚焦、文字可读。
- 验证 1080p H.264/AAC；按现场需求增加 4K、HEVC、MKV 等样本。
- 连续循环 8 小时，观察卡顿、音画同步、温度和内存。

## 当前测试限制

V1.2.0 本地质量门禁已执行 `testDebugUnitTest`、`lintDebug` 和 `assembleDebug`；APK 还通过了包清单、权限、ZIP 对齐、v1/v2 调试签名和 SHA-256 核验。验证时 ADB 未发现 Android TV、电视盒子或 TV 模拟器，因此无法执行真实媒体索引、解码器、U 盘、遥控器和厂商开机策略测试。自动化测试不替代目标硬件验收。
